@@ -1,9 +1,14 @@
 ﻿IMPROVEMENTS / FIXES
+- AI:
+	- Adjustments to terrain avoidance defaults and how the threat range is calculated for better default terrain avoidance.
+	- Add a slider for setting the angular size of the rear blind cone, in which the craft will simply pitch up to turn to a target in that direction.
 - UI:
 	- Add a case-insensitive filter to the vessel selection windows in Vessel Mover and Custom Spawn Templates.
 - Mod Integration:
 	- Add support for the MouseAimFlight mod.
 		- Disables the prevention of firing weapons when the mouse is over windows when the Mouse Aim mode is active.
+- Competition:
+	- Add an option to generate a CSV file for the overall PVP scores in the PVP parser.
 
 v1.5.9.2
 IMPROVEMENTS / FIXES
